HOTFOOT-002: Upgrade to spark 1.6.0